--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,10 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Build APK
+      run: bash ./gradlew assembleDebug --stacktrace
+    - name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: apk
+        path: app/build/outputs/apk/debug/app-debug.apk
